--- a/subgraph-template.yaml
+++ b/subgraph-template.yaml
@@ -63,58 +63,6 @@ dataSources:
           handler: handleDeleteV2
       file: ./src/factory-mapping.ts
   - kind: ethereum/contract
-    name: MCV
-    network: mainnet
-    source:
-      address: "0x4570b4faf71e23942b8b9f934b47ccedf7540162"
-      abi: V2Moloch
-      startBlock: 9484660
-    mapping:
-      kind: ethereum/events
-      apiVersion: 0.0.3
-      language: wasm/assemblyscript
-      entities:
-        - Moloch
-        - TokenBalance
-        - Token
-        - Member
-        - Vote
-        - Proposal
-        - Badge
-      abis:
-        - name: V2Moloch
-          file: ./abis/V2Moloch.json
-        - name: Erc20
-          file: ./abis/Erc20.json
-        - name: Erc20Bytes32
-          file: ./abis/Erc20Bytes32.json
-      eventHandlers:
-        - event: SummonComplete(indexed address,address[],uint256,uint256,uint256,uint256,uint256,uint256,uint256)
-          handler: handleSummonCompleteLegacy
-        - event: SubmitProposal(indexed address,uint256,uint256,uint256,address,uint256,address,string,bool[6],uint256,indexed address,indexed address)
-          handler: handleSubmitProposal
-        - event: SubmitVote(uint256,indexed uint256,indexed address,indexed address,uint8)
-          handler: handleSubmitVote
-        - event: SponsorProposal(indexed address,indexed address,uint256,uint256,uint256)
-          handler: handleSponsorProposal
-        - event: ProcessProposal(indexed uint256,indexed uint256,bool)
-          handler: handleProcessProposal
-        - event: ProcessGuildKickProposal(indexed uint256,indexed uint256,bool)
-          handler: handleProcessGuildKickProposal
-        - event: ProcessWhitelistProposal(indexed uint256,indexed uint256,bool)
-          handler: handleProcessWhitelistProposal
-        - event: UpdateDelegateKey(indexed address,address)
-          handler: handleUpdateDelegateKey
-        - event: CancelProposal(indexed uint256,address)
-          handler: handleCancelProposal
-        - event: Withdraw(indexed address,address,uint256)
-          handler: handleWithdraw
-        - event: Ragequit(indexed address,uint256,uint256)
-          handler: handleRagequit
-        - event: TokensCollected(indexed address,uint256)
-          handler: handleTokensCollected
-      file: ./src/v2-mapping.ts
-  - kind: ethereum/contract
     name: MolochDAO
     network: mainnet
     source:
@@ -128,9 +76,6 @@ dataSources:
       entities:
         - Moloch
         - Member
-        - Vote
-        - Proposal
-        - Badge
       abis:
         - name: V1Moloch
           file: ./abis/V1Moloch.json
@@ -141,63 +86,9 @@ dataSources:
         - name: Erc20Bytes32
           file: ./abis/Erc20Bytes32.json
       eventHandlers:
-        - event: SummonComplete(indexed address,uint256)
-          handler: handleSummonCompleteLegacy
-        - event: SubmitProposal(uint256,indexed address,indexed address,indexed address,uint256,uint256)
-          handler: handleSubmitProposal
-        - event: SubmitVote(indexed uint256,indexed address,indexed address,uint8)
-          handler: handleSubmitVote
-        - event: ProcessProposal(indexed uint256,indexed address,indexed address,uint256,uint256,bool)
-          handler: handleProcessProposal
-        - event: Ragequit(indexed address,uint256)
-          handler: handleRagequit
-        - event: Abort(indexed uint256,address)
-          handler: handleAbort
-        - event: UpdateDelegateKey(indexed address,address)
-          handler: handleUpdateDelegateKey
-      file: ./src/v1-mapping.ts
-  - kind: ethereum/contract
-    name: MCDAO
-    network: mainnet
-    source:
-      address: "0x0372f3696fa7dc99801f435fd6737e57818239f2"
-      abi: V1Moloch
-      startBlock: 7901580
-    mapping:
-      kind: ethereum/events
-      apiVersion: 0.0.3
-      language: wasm/assemblyscript
-      entities:
-        - Moloch
-        - Member
-        - Vote
-        - Proposal
-        - Badge
-      abis:
-        - name: V1Moloch
-          file: ./abis/V1Moloch.json
-        - name: Guildbank
-          file: ./abis/Guildbank.json
-        - name: Erc20
-          file: ./abis/Erc20.json
-        - name: Erc20Bytes32
-          file: ./abis/Erc20Bytes32.json
-      eventHandlers:
-        - event: SummonComplete(indexed address,uint256)
-          handler: handleSummonCompleteLegacy
-        - event: SubmitProposal(uint256,indexed address,indexed address,indexed address,uint256,uint256)
-          handler: handleSubmitProposal
-        - event: SubmitVote(indexed uint256,indexed address,indexed address,uint8)
-          handler: handleSubmitVote
-        - event: ProcessProposal(indexed uint256,indexed address,indexed address,uint256,uint256,bool)
-          handler: handleProcessProposal
-        - event: Ragequit(indexed address,uint256)
-          handler: handleRagequit
-        - event: Abort(indexed uint256,address)
-          handler: handleAbort
-        - event: UpdateDelegateKey(indexed address,address)
-          handler: handleUpdateDelegateKey
-      file: ./src/v1-mapping.ts
+        - event: "SummonComplete(indexed address,uint256)"
+          handler: handleLegacyRegistration
+      file: ./src/legacy-mapping.ts
 templates:
   - kind: ethereum/contract
     name: MolochV1Template
