--- a/package.json
+++ b/package.json
@@ -2,24 +2,30 @@
   "name": "daohaus-moloch-v2-factory",
   "license": "UNLICENSED",
   "scripts": {
+    "auth": "graph auth https://api.thegraph.com/ $GRAPH_ACCESS_TOKEN",
     "codegen": "graph codegen",
     "build": "graph build",
-    "deploy-main": "node scripts/deploy-prep.js mainnet && graph deploy --node https://api.thegraph.com/deploy/ --ipfs https://api.thegraph.com/ipfs/ odyssy-automaton/daohaus",
-    "deploy-kovan": "node scripts/deploy-prep.js kovan && graph deploy --node https://api.thegraph.com/deploy/ --ipfs https://api.thegraph.com/ipfs/ odyssy-automaton/daohaus-kovan",
-    "deploy-minion": "graph deploy --node https://api.thegraph.com/deploy/ --ipfs https://api.thegraph.com/ipfs/ odyssy-automaton/daohaus-minion-kovan",
-    "deploy-rinkeby": "node scripts/deploy-prep.js rinkeby && graph deploy --node https://api.thegraph.com/deploy/ --ipfs https://api.thegraph.com/ipfs/ odyssy-automaton/daohaus-rinkeby",
-    "deploy-xdai": "node scripts/deploy-prep.js xdai && graph deploy --node https://api.thegraph.com/deploy/ --ipfs https://api.thegraph.com/ipfs/ odyssy-automaton/daohaus-xdai",
-    "create-local": "graph create --node http://localhost:8020/ odyssy-automaton/daohaus",
-    "remove-local": "graph remove --node http://localhost:8020/ odyssy-automaton/daohaus",
-    "deploy-local": "graph deploy --node http://localhost:8020/ --ipfs http://localhost:5001 odyssy-automaton/daohaus",
     "create-local-idchain": "graph create --node http://localhost:8020/ odyssy-automaton/daohaus-idchain",
     "remove-local-idchain": "graph remove --node http://localhost:8020/ odyssy-automaton/daohaus",
-    "deploy-local-idchain": "node scripts/deploy-prep.js idchain && graph deploy --node http://localhost:8020/ --ipfs https://api.thegraph.com/ipfs/  odyssy-automaton/daohaus-idchain"
+    "prepare-idchain": "mustache config/idchain.json subgraph-template.yaml > subgraph.yaml",
+    "deploy-local-idchain": "graph deploy --node http://localhost:8020/ --ipfs https://api.thegraph.com/ipfs/  odyssy-automaton/daohaus-idchain",
+    "prepare-mainnet": "mustache config/mainnet.json subgraph-template.yaml > subgraph.yaml",
+    "deploy-mainnet": "graph deploy --node https://api.thegraph.com/deploy/ --ipfs https://api.thegraph.com/ipfs/ odyssy-automaton/daohaus",
+    "prepare-kovan": "mustache config/kovan.json subgraph-template.yaml > subgraph.yaml",
+    "deploy-kovan": "graph deploy --node https://api.thegraph.com/deploy/ --ipfs https://api.thegraph.com/ipfs/ odyssy-automaton/daohaus-kovan",
+    "deploy-minion": "graph deploy --node https://api.thegraph.com/deploy/ --ipfs https://api.thegraph.com/ipfs/ odyssy-automaton/daohaus-minion-kovan",
+    "prepare-rinkeby": "mustache config/rinkeby.json subgraph-template.yaml > subgraph.yaml",
+    "deploy-rinkeby": "graph deploy --node https://api.thegraph.com/deploy/ --ipfs https://api.thegraph.com/ipfs/ odyssy-automaton/daohaus-rinkeby",
+    "prepare-xdai": "mustache config/xdai.json subgraph-template.yaml > subgraph.yaml",
+    "deploy-xdai": "graph deploy --node https://api.thegraph.com/deploy/ --ipfs https://api.thegraph.com/ipfs/ odyssy-automaton/daohaus-xdai"
   },
   "dependencies": {
     "@graphprotocol/graph-cli": "0.17.1",
     "@graphprotocol/graph-ts": "0.17.0",
     "js-yaml": "^3.13.1",
     "minimist": "^1.2.5"
+  },
+  "devDependencies": {
+    "mustache": "^4.0.1"
   }
 }
