--- a/subgraph-template.yaml
+++ b/subgraph-template.yaml
@@ -4,14 +4,11 @@ schema:
 dataSources:
   - kind: ethereum/contract
     name: V1Factory
-    network: kovan
-    # network: mainnet
+    network: {{network}}
     source:
-      address: "0x0C60Cd59f42093c7489BA68BAA4d7A01f2468153"
-      # address: "0x2840d12d926cc686217bb42b80b662c7d72ee787"
+      address: '{{v1FactoryAddress}}'
       abi: V1Factory
-      startBlock: 14980875
-      # startBlock: 8625240
+      startBlock: {{v1FactoryStartBlock}}
     mapping:
       kind: ethereum/events
       apiVersion: 0.0.3
@@ -35,14 +32,11 @@ dataSources:
       file: ./src/factory-mapping.ts
   - kind: ethereum/contract
     name: V2Factory
-    network: kovan
-    # network: mainnet
+    network: {{network}}
     source:
-      address: "0xB47778d3BcCBf5e39dEC075CA5F185fc20567b1e"
-      # address: "0x1782a13f176e84Be200842Ade79daAA0B09F0418"
+      address: '{{v2FactoryAddress}}'
       abi: V2Factory
-      startBlock: 16845360
-      # startBlock: 9484660
+      startBlock: {{v2FactoryStartBlock}}
     mapping:
       kind: ethereum/events
       apiVersion: 0.0.3
@@ -64,7 +58,7 @@ dataSources:
       file: ./src/factory-mapping.ts
   - kind: ethereum/contract
     name: MolochDAO
-    network: mainnet
+    network: {{network}}
     source:
       address: "0x1fd169a4f5c59acf79d0fd5d91d1201ef1bce9f1"
       abi: V1Moloch
@@ -92,8 +86,7 @@ dataSources:
 templates:
   - kind: ethereum/contract
     name: MolochV1Template
-    network: kovan
-    # network: mainnet
+    network: {{network}}
     source:
       abi: V1Moloch
     mapping:
@@ -133,8 +126,7 @@ templates:
           handler: handleUpdateDelegateKey
   - kind: ethereum/contract
     name: MolochV2Template
-    network: kovan
-    # network: mainnet
+    network: {{network}}
     source:
       abi: V2Moloch
     mapping:
