--- a/subgraph.yaml
+++ b/subgraph.yaml
@@ -5,13 +5,10 @@ dataSources:
   - kind: ethereum/contract
     name: V1Factory
     network: kovan
-    # network: mainnet
     source:
-      address: "0x0C60Cd59f42093c7489BA68BAA4d7A01f2468153"
-      # address: "0x2840d12d926cc686217bb42b80b662c7d72ee787"
+      address: '0x0C60Cd59f42093c7489BA68BAA4d7A01f2468153'
       abi: V1Factory
       startBlock: 14980875
-      # startBlock: 8625240
     mapping:
       kind: ethereum/events
       apiVersion: 0.0.3
@@ -30,19 +27,16 @@ dataSources:
         - name: Erc20Bytes32
           file: ./abis/Erc20Bytes32.json
       eventHandlers:
-        - event: "Register(address,indexed address,uint256,string,uint256)"
+        - event: 'Register(address,indexed address,uint256,string,uint256)'
           handler: handleRegisterV1
       file: ./src/factory-mapping.ts
   - kind: ethereum/contract
     name: V2Factory
     network: kovan
-    # network: mainnet
     source:
-      address: "0xB47778d3BcCBf5e39dEC075CA5F185fc20567b1e"
-      # address: "0x1782a13f176e84Be200842Ade79daAA0B09F0418"
+      address: '0xB47778d3BcCBf5e39dEC075CA5F185fc20567b1e'
       abi: V2Factory
       startBlock: 16845360
-      # startBlock: 9484660
     mapping:
       kind: ethereum/events
       apiVersion: 0.0.3
@@ -57,46 +51,18 @@ dataSources:
         - name: Erc20Bytes32
           file: ./abis/Erc20Bytes32.json
       eventHandlers:
-        - event: Register(uint256,address,indexed address,address[],uint256,uint256,uint256,uint256,uint256,uint256,uint256,string,uint256)
+        - event: >-
+            Register(uint256,address,indexed
+            address,address[],uint256,uint256,uint256,uint256,uint256,uint256,uint256,string,uint256)
           handler: handleRegisterV2
         - event: Delete(address)
           handler: handleDeleteV2
       file: ./src/factory-mapping.ts
   - kind: ethereum/contract
-    name: V21Factory
-    network: kovan
-    #network: mainnet
-    source:
-      address: "0x2e08D4813bd59fE4A37B742A4D132E5b4Fd04200"
-      #address: "0xaa3c19F5330D1dd618bB8D960ec9F36c94Cf9815"
-      abi: V21Factory
-      startBlock: 16845360
-      #startBlock: 11088227 
-    mapping:
-      kind: ethereum/events
-      apiVersion: 0.0.3
-      language: wasm/assemblyscript
-      entities:
-        - Moloch
-      abis:
-        - name: V21Factory
-          file: ./abis/V21Factory.json
-        - name: Erc20
-          file: ./abis/Erc20.json
-        - name: Erc20Bytes32
-          file: ./abis/Erc20Bytes32.json
-      eventHandlers:
-        - event: SummonComplete(indexed address,address[],address[],uint256,uint256,uint256,uint256,uint256,uint256,uint256,uint256[])
-          handler: handleSummonv21
-        - event: Register(uint256,address,string,string,uint256)
-          handler: handleRegisterv21
-      file: ./src/factory-mapping.ts    
-  - kind: ethereum/contract
     name: MolochDAO
     network: kovan
-    #network: mainnet
     source:
-      address: "0x1fd169a4f5c59acf79d0fd5d91d1201ef1bce9f1"
+      address: '0x1fd169a4f5c59acf79d0fd5d91d1201ef1bce9f1'
       abi: V1Moloch
       startBlock: 7218560
     mapping:
@@ -116,14 +82,13 @@ dataSources:
         - name: Erc20Bytes32
           file: ./abis/Erc20Bytes32.json
       eventHandlers:
-        - event: "SummonComplete(indexed address,uint256)"
+        - event: 'SummonComplete(indexed address,uint256)'
           handler: handleSummonCompleteMoloch
       file: ./src/legacy-mapping.ts
 templates:
   - kind: ethereum/contract
     name: MolochV1Template
     network: kovan
-    #network: mainnet
     source:
       abi: V1Moloch
     mapping:
@@ -147,24 +112,27 @@ templates:
         - name: Erc20Bytes32
           file: ./abis/Erc20Bytes32.json
       eventHandlers:
-        - event: SummonComplete(indexed address,uint256)
+        - event: 'SummonComplete(indexed address,uint256)'
           handler: handleSummonComplete
-        - event: SubmitProposal(uint256,indexed address,indexed address,indexed address,uint256,uint256)
+        - event: >-
+            SubmitProposal(uint256,indexed address,indexed address,indexed
+            address,uint256,uint256)
           handler: handleSubmitProposal
-        - event: SubmitVote(indexed uint256,indexed address,indexed address,uint8)
+        - event: 'SubmitVote(indexed uint256,indexed address,indexed address,uint8)'
           handler: handleSubmitVote
-        - event: ProcessProposal(indexed uint256,indexed address,indexed address,uint256,uint256,bool)
+        - event: >-
+            ProcessProposal(indexed uint256,indexed address,indexed
+            address,uint256,uint256,bool)
           handler: handleProcessProposal
-        - event: Ragequit(indexed address,uint256)
+        - event: 'Ragequit(indexed address,uint256)'
           handler: handleRagequit
-        - event: Abort(indexed uint256,address)
+        - event: 'Abort(indexed uint256,address)'
           handler: handleAbort
-        - event: UpdateDelegateKey(indexed address,address)
+        - event: 'UpdateDelegateKey(indexed address,address)'
           handler: handleUpdateDelegateKey
   - kind: ethereum/contract
     name: MolochV2Template
     network: kovan
-    #network: mainnet
     source:
       abi: V2Moloch
     mapping:
@@ -188,34 +156,42 @@ templates:
         - name: Erc20Bytes32
           file: ./abis/Erc20Bytes32.json
       eventHandlers:
-        - event: SummonComplete(indexed address,address[],uint256,uint256,uint256,uint256,uint256,uint256,uint256)
+        - event: >-
+            SummonComplete(indexed
+            address,address[],uint256,uint256,uint256,uint256,uint256,uint256,uint256)
           handler: handleSummonComplete
-        - event: SubmitProposal(indexed address,uint256,uint256,uint256,address,uint256,address,string,bool[6],uint256,indexed address,indexed address)
+        - event: >-
+            SubmitProposal(indexed
+            address,uint256,uint256,uint256,address,uint256,address,string,bool[6],uint256,indexed
+            address,indexed address)
           handler: handleSubmitProposal
-        - event: SubmitVote(uint256,indexed uint256,indexed address,indexed address,uint8)
+        - event: >-
+            SubmitVote(uint256,indexed uint256,indexed address,indexed
+            address,uint8)
           handler: handleSubmitVote
-        - event: SponsorProposal(indexed address,indexed address,uint256,uint256,uint256)
+        - event: >-
+            SponsorProposal(indexed address,indexed
+            address,uint256,uint256,uint256)
           handler: handleSponsorProposal
-        - event: ProcessProposal(indexed uint256,indexed uint256,bool)
+        - event: 'ProcessProposal(indexed uint256,indexed uint256,bool)'
           handler: handleProcessProposal
-        - event: ProcessGuildKickProposal(indexed uint256,indexed uint256,bool)
+        - event: 'ProcessGuildKickProposal(indexed uint256,indexed uint256,bool)'
           handler: handleProcessGuildKickProposal
-        - event: ProcessWhitelistProposal(indexed uint256,indexed uint256,bool)
+        - event: 'ProcessWhitelistProposal(indexed uint256,indexed uint256,bool)'
           handler: handleProcessWhitelistProposal
-        - event: UpdateDelegateKey(indexed address,address)
+        - event: 'UpdateDelegateKey(indexed address,address)'
           handler: handleUpdateDelegateKey
-        - event: CancelProposal(indexed uint256,address)
+        - event: 'CancelProposal(indexed uint256,address)'
           handler: handleCancelProposal
-        - event: Withdraw(indexed address,address,uint256)
+        - event: 'Withdraw(indexed address,address,uint256)'
           handler: handleWithdraw
-        - event: Ragequit(indexed address,uint256,uint256)
+        - event: 'Ragequit(indexed address,uint256,uint256)'
           handler: handleRagequit
-        - event: TokensCollected(indexed address,uint256)
+        - event: 'TokensCollected(indexed address,uint256)'
           handler: handleTokensCollected
   - kind: ethereum/contract
     name: MolochV21Template
     network: kovan
-    #network: mainnet
     source:
       abi: V21Moloch
     mapping:
@@ -239,25 +215,32 @@ templates:
         - name: Erc20Bytes32
           file: ./abis/Erc20Bytes32.json
       eventHandlers:
-        - event: SubmitProposal(indexed address,uint256,uint256,uint256,address,uint256,address,string,bool[6],uint256,indexed address,indexed address)
+        - event: >-
+            SubmitProposal(indexed
+            address,uint256,uint256,uint256,address,uint256,address,string,bool[6],uint256,indexed
+            address,indexed address)
           handler: handleSubmitProposal
-        - event: SubmitVote(uint256,indexed uint256,indexed address,indexed address,uint8)
+        - event: >-
+            SubmitVote(uint256,indexed uint256,indexed address,indexed
+            address,uint8)
           handler: handleSubmitVote
-        - event: SponsorProposal(indexed address,indexed address,uint256,uint256,uint256)
+        - event: >-
+            SponsorProposal(indexed address,indexed
+            address,uint256,uint256,uint256)
           handler: handleSponsorProposal
-        - event: ProcessProposal(indexed uint256,indexed uint256,bool)
+        - event: 'ProcessProposal(indexed uint256,indexed uint256,bool)'
           handler: handleProcessProposal
-        - event: ProcessGuildKickProposal(indexed uint256,indexed uint256,bool)
+        - event: 'ProcessGuildKickProposal(indexed uint256,indexed uint256,bool)'
           handler: handleProcessGuildKickProposal
-        - event: ProcessWhitelistProposal(indexed uint256,indexed uint256,bool)
+        - event: 'ProcessWhitelistProposal(indexed uint256,indexed uint256,bool)'
           handler: handleProcessWhitelistProposal
-        - event: UpdateDelegateKey(indexed address,address)
+        - event: 'UpdateDelegateKey(indexed address,address)'
           handler: handleUpdateDelegateKey
-        - event: CancelProposal(indexed uint256,address)
+        - event: 'CancelProposal(indexed uint256,address)'
           handler: handleCancelProposal
-        - event: Withdraw(indexed address,address,uint256)
+        - event: 'Withdraw(indexed address,address,uint256)'
           handler: handleWithdraw
-        - event: Ragequit(indexed address,uint256,uint256)
+        - event: 'Ragequit(indexed address,uint256,uint256)'
           handler: handleRagequit
-        - event: TokensCollected(indexed address,uint256)
+        - event: 'TokensCollected(indexed address,uint256)'
           handler: handleTokensCollected
