--- a/subgraph-template.yaml
+++ b/subgraph-template.yaml
@@ -113,7 +113,7 @@ dataSources:
         - name: Minion
           file: ./abis/Minion.json
       eventHandlers:
-        - event: "SummonMinion(indexed address,indexed address,string)"
+        - event: "SummonMinion(indexed address,indexed address,string,string)"
           handler: handleSummonedMinion
       file: ./src/minion-factory-mapping.ts
   - kind: ethereum/contract
