--- a/subgraph.yaml
+++ b/subgraph.yaml
@@ -4,11 +4,11 @@ schema:
 dataSources:
   - kind: ethereum/contract
     name: V1Factory
-    network: kovan
+    network: mainnet
     source:
-      address: '0x0C60Cd59f42093c7489BA68BAA4d7A01f2468153'
+      address: '0x2840d12d926cc686217bb42b80b662c7d72ee787'
       abi: V1Factory
-      startBlock: 14980875
+      startBlock: 8625240
     mapping:
       kind: ethereum/events
       apiVersion: 0.0.3
@@ -32,11 +32,11 @@ dataSources:
       file: ./src/factory-mapping.ts
   - kind: ethereum/contract
     name: V2Factory
-    network: kovan
+    network: mainnet
     source:
-      address: '0xB47778d3BcCBf5e39dEC075CA5F185fc20567b1e'
+      address: '0x1782a13f176e84Be200842Ade79daAA0B09F0418'
       abi: V2Factory
-      startBlock: 16845360
+      startBlock: 9484660
     mapping:
       kind: ethereum/events
       apiVersion: 0.0.3
@@ -60,11 +60,11 @@ dataSources:
       file: ./src/factory-mapping.ts
   - kind: ethereum/contract
     name: V21Factory
-    network: kovan
+    network: mainnet
     source:
-      address: '0x9c5d087f912e7187D9c75e90999b03FB31Ee17f5'
+      address: '0x38064F40B20347d58b326E767791A6f79cdEddCe'
       abi: V21Factory
-      startBlock: 22640938
+      startBlock: 11499150
     mapping:
       kind: ethereum/events
       apiVersion: 0.0.3
@@ -88,11 +88,11 @@ dataSources:
       file: ./src/factory-mapping.ts
   - kind: ethereum/contract
     name: MinionFactory
-    network: kovan
+    network: mainnet
     source:
-      address: '0x80ec2dB292E7a6D1D5bECB80e6479b2bE048AC98'
+      address: '0x2A0D29d0a9e5DE91512805c3E2B58c1e95700dDa'
       abi: MinionFactory
-      startBlock: 22640617
+      startBlock: 11499121
     mapping:
       kind: ethereum/events
       apiVersion: 0.0.3
@@ -111,10 +111,37 @@ dataSources:
         - event: 'SummonMinion(indexed address,indexed address,string,string)'
           handler: handleSummonedMinion
       file: ./src/minion-factory-mapping.ts
+  - kind: ethereum/contract
+    name: MolochDAO
+    network: mainnet
+    source:
+      address: '0x1fd169a4f5c59acf79d0fd5d91d1201ef1bce9f1'
+      abi: V1Moloch
+      startBlock: 7218560
+    mapping:
+      kind: ethereum/events
+      apiVersion: 0.0.3
+      language: wasm/assemblyscript
+      entities:
+        - Moloch
+        - Member
+      abis:
+        - name: V1Moloch
+          file: ./abis/V1Moloch.json
+        - name: Guildbank
+          file: ./abis/Guildbank.json
+        - name: Erc20
+          file: ./abis/Erc20.json
+        - name: Erc20Bytes32
+          file: ./abis/Erc20Bytes32.json
+      eventHandlers:
+        - event: 'SummonComplete(indexed address,uint256)'
+          handler: handleSummonCompleteMoloch
+      file: ./src/legacy-mapping.ts
 templates:
   - kind: ethereum/contract
     name: MolochV1Template
-    network: kovan
+    network: mainnet
     source:
       abi: V1Moloch
     mapping:
@@ -158,7 +185,7 @@ templates:
           handler: handleUpdateDelegateKey
   - kind: ethereum/contract
     name: MolochV2Template
-    network: kovan
+    network: mainnet
     source:
       abi: V2Moloch
     mapping:
@@ -217,7 +244,7 @@ templates:
           handler: handleTokensCollected
   - kind: ethereum/contract
     name: MolochV21Template
-    network: kovan
+    network: mainnet
     source:
       abi: V21Moloch
     mapping:
@@ -232,7 +259,6 @@ templates:
         - Member
         - Vote
         - Proposal
-        - Badge
       abis:
         - name: V21Moloch
           file: ./abis/V21Moloch.json
