--- a/subgraph.yaml
+++ b/subgraph.yaml
@@ -4,11 +4,11 @@ schema:
 dataSources:
   - kind: ethereum/contract
     name: V1Factory
-    network: mainnet
+    network: xdai
     source:
-      address: '0x2840d12d926cc686217bb42b80b662c7d72ee787'
+      address: '0x9232DeA84E91b49feF6b604EEA0455692FC27Ba8'
       abi: V1Factory
-      startBlock: 8625240
+      startBlock: 10733005
     mapping:
       kind: ethereum/events
       apiVersion: 0.0.3
@@ -32,11 +32,11 @@ dataSources:
       file: ./src/factory-mapping.ts
   - kind: ethereum/contract
     name: V2Factory
-    network: mainnet
+    network: xdai
     source:
-      address: '0x1782a13f176e84Be200842Ade79daAA0B09F0418'
+      address: '0x124F707B3675b5fdd6208F4483C5B6a0B9bAf316'
       abi: V2Factory
-      startBlock: 9484660
+      startBlock: 10733005
     mapping:
       kind: ethereum/events
       apiVersion: 0.0.3
@@ -60,11 +60,11 @@ dataSources:
       file: ./src/factory-mapping.ts
   - kind: ethereum/contract
     name: V21Factory
-    network: mainnet
+    network: xdai
     source:
-      address: '0x38064F40B20347d58b326E767791A6f79cdEddCe'
+      address: '0x0F50B2F3165db96614fbB6E4262716acc9F9e098'
       abi: V21Factory
-      startBlock: 11499150
+      startBlock: 13569775
     mapping:
       kind: ethereum/events
       apiVersion: 0.0.3
@@ -88,11 +88,11 @@ dataSources:
       file: ./src/factory-mapping.ts
   - kind: ethereum/contract
     name: MinionFactory
-    network: mainnet
+    network: xdai
     source:
-      address: '0x2A0D29d0a9e5DE91512805c3E2B58c1e95700dDa'
+      address: '0x9610389d548Ca0224aCaC40eB3241c5ED88D2479'
       abi: MinionFactory
-      startBlock: 11499121
+      startBlock: 13569739
     mapping:
       kind: ethereum/events
       apiVersion: 0.0.3
@@ -111,37 +111,10 @@ dataSources:
         - event: 'SummonMinion(indexed address,indexed address,string,string)'
           handler: handleSummonedMinion
       file: ./src/minion-factory-mapping.ts
-  - kind: ethereum/contract
-    name: MolochDAO
-    network: mainnet
-    source:
-      address: '0x1fd169a4f5c59acf79d0fd5d91d1201ef1bce9f1'
-      abi: V1Moloch
-      startBlock: 7218560
-    mapping:
-      kind: ethereum/events
-      apiVersion: 0.0.3
-      language: wasm/assemblyscript
-      entities:
-        - Moloch
-        - Member
-      abis:
-        - name: V1Moloch
-          file: ./abis/V1Moloch.json
-        - name: Guildbank
-          file: ./abis/Guildbank.json
-        - name: Erc20
-          file: ./abis/Erc20.json
-        - name: Erc20Bytes32
-          file: ./abis/Erc20Bytes32.json
-      eventHandlers:
-        - event: 'SummonComplete(indexed address,uint256)'
-          handler: handleSummonCompleteMoloch
-      file: ./src/legacy-mapping.ts
 templates:
   - kind: ethereum/contract
     name: MolochV1Template
-    network: mainnet
+    network: xdai
     source:
       abi: V1Moloch
     mapping:
@@ -185,7 +158,7 @@ templates:
           handler: handleUpdateDelegateKey
   - kind: ethereum/contract
     name: MolochV2Template
-    network: mainnet
+    network: xdai
     source:
       abi: V2Moloch
     mapping:
@@ -244,7 +217,7 @@ templates:
           handler: handleTokensCollected
   - kind: ethereum/contract
     name: MolochV21Template
-    network: mainnet
+    network: xdai
     source:
       abi: V21Moloch
     mapping:
